@@ -1,6 +1,6 @@
-$NetBSD: distinfo,v 1.8 2003/02/15 05:18:09 salo Exp $
+$NetBSD: distinfo,v 1.9 2003/09/16 09:24:57 agc Exp $
 
-SHA1 (jwhois-3.2.1.tar.gz) = d515079df2c58a7d3b7bdfed887a20f0b6ebbcbe
-Size (jwhois-3.2.1.tar.gz) = 377777 bytes
+SHA1 (jwhois-3.2.2.tar.gz) = ca69b017e19d378affd7cdc3a980f2209cb1caab
+Size (jwhois-3.2.2.tar.gz) = 385390 bytes
 SHA1 (patch-aa) = 649e4ff47b7ae8985573cd4bc53954d3cd4d5fe3
 SHA1 (patch-ab) = e2b35b66adae6caba8a778194ff0238a31006b0b
